--- a/posting/posting.env
+++ b/posting/posting.env
@@ -1,3 +1,3 @@
 BASE_URL=localhost:8080/api/v1
-BASE_USERNAME=test
-BASE_PASSWORD="test password"
+BASE_USERNAME=hello
+BASE_PASSWORD="hello password"
