--- a/posting/posting.env
+++ b/posting/posting.env
@@ -1,3 +1,3 @@
-BASE_URL=localhost:8080/api/v1
-BASE_USERNAME=hello
-BASE_PASSWORD="hello password"
+BASE_URL=http://localhost:8080/api/v1
+BASE_USERNAME=your_test_username
+BASE_PASSWORD=your_test_password
